# llm-ie

./: .gitignore  404.html  README.md  index.html  mkdocs.yml  objects.inv  pyproject.toml
chunkers/: index.html
demo/: medication_relation_extraction.ipynb  prompt_template_writing.ipynb  prompt_template_writing_via_chat.ipynb  quick_start.py
docs/: chunkers.md  extractors.md  index.md  installation.md  llm_config.md  llm_inference_engine.md  prompt_editor.md  prompt_templates.md  quick_start.md  visualization.md  web_application.md
extractors/: index.html
installation/: index.html
llm_config/: index.html
llm_inference_engine/: index.html
package/llm-ie/: README.md  pyproject.toml
package/llm-ie/pipelines/: multithread_frame_extraction.py  sample_config.yaml  sequential_frame_extraction.py
package/llm-ie/pipelines/concurrent_frame_extraction/: concurrent_frame_extraction.py  sample_config.yaml
package/llm-ie/pipelines/multitread_frame_extraction/: multithread_frame_extraction.py  sample_config.yaml
package/llm-ie/src/llm_ie/: __init__.py  chunkers.py  data_types.py  engines.py  extractors.py  prompt_editor.py  utils.py
package/llm-ie/src/llm_ie/asset/PromptEditor_prompts/: chat.txt  system.txt
package/llm-ie/src/llm_ie/asset/default_prompts/: LLMUnitChunker_user_prompt.txt  ReviewFrameExtractor_addition_review_prompt.txt  ReviewFrameExtractor_revision_review_prompt.txt  SentenceReviewFrameExtractor_revision_review_prompt.txt
package/llm-ie/src/llm_ie/asset/prompt_guide/: AttributeExtractor_prompt_guide.txt  BasicFrameExtractor_prompt_guide.txt  BasicReviewFrameExtractor_prompt_guide.txt  DirectFrameExtractor_prompt_guide.txt  MultiClassRelationExtractor_prompt_guide.txt  SentenceFrameExtractor_prompt_guide.txt  SentenceReviewFrameExtractor_prompt_guide.txt  StructExtractor_prompt_guide.txt
prompt_editor/: index.html
prompt_templates/: index.html
quick_start/: index.html
search/: search_index.json
visualization/: index.html
web_app/: Dockerfile  app.py  run.py  (+1 more)
(+73 files in other folders)
