[tool.poetry]
name = "llm-ie"
version = "0.4.2"
description = "An LLM-powered tool that transforms everyday language into robust information extraction pipelines."
authors = ["Enshuo (David) Hsu"]
license = "MIT"
readme = "README.md"

exclude = [
    "test/**"
]


[tool.poetry.dependencies]
python = "^3.11"
nltk = "^3.8"
colorama = "^0.4.6"
json_repair = "^0.30"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
