[tool.poetry]
name = "llm-ie"
version = "1.2.1"
description = "A comprehensive toolkit that provides building blocks for LLM-based named entity recognition, attribute extraction, and relation extraction pipelines."
authors = ["Enshuo (David) Hsu"]
license = "MIT"
readme = "README.md"

exclude = [
    "test/**",
    "develop/**"
]


[tool.poetry.dependencies]
python = "^3.11"
nltk = "^3.8"
colorama = "^0.4.6"
json_repair = "^0.30"
nest_asyncio = "^1.6.0"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
